--- a/css/sojeong.css
+++ b/css/sojeong.css
@@ -12,6 +12,12 @@ body {background-color:#f9f9f9}
 .evt {display: block; width: 185px; height: 40px; position: relative; top: -105px; left: 256px; outline:none}
 .review {display: block; width: 185px; height: 40px; position: relative; top: -146px; left: 56px; outline:none }
 
+
+/* 슬라이드 */
+.mainSliderTitle {display:none;}
+
+
+
 /* quick */
 .scroll #quick {
   position:fixed;
@@ -22,7 +28,7 @@ body {background-color:#f9f9f9}
   }
 
 .scroll #quick .desk li {
-  width:100px; 
+  width:100px;
   border:1px solid #ccc;
   padding:10px 5px;
   border-radius:4px;
@@ -32,13 +38,11 @@ body {background-color:#f9f9f9}
 .scroll #quick li {display:none;}
 .scroll #quick .desk li:hover {margin-left:-50px;}
 
-.scroll #quick button {width:50px; height:50px; background-color:#fff; color:#222;
-border:1px solid #222;}
+.scroll #quick button {width:50px; height:50px; background-color:#f9f9f9; color:#222; border-radius: 50%; border:1px solid #222;}
 .scroll #quick button a {padding: 15px 10px;}
 
-.scroll #quick .q_btn .inquiry {margin-bottom:4px;width:50px; height:50px;background-color:#fff; color:#222;
-border:1px solid #222; }
-
+.scroll #quick .q_btn .inquiry {display:block;  margin-bottom:10px;width:50px; height:50px;background-color:transparent; color:#222; border-radius: 50%; border:1px solid #222; }
+.scroll #quick .q_btn .inquiry a {width:50px;height:50px;}
 
 
 
